ast/testdata/tests/errors/contracts/end_of_contract_after_elif_statement.rql
contract IfEOF() -> void {
    if x {

    } elif y()
}
